--- a/libGxxGmCrypto/libGxxGmCryptoDemo/libGxxGmCryptoDemo.vcproj
+++ b/libGxxGmCrypto/libGxxGmCryptoDemo/libGxxGmCryptoDemo.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\openssl\include"
+				AdditionalIncludeDirectories="..\..\openssl\include;..\..\Poco\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -62,7 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\Debug;..\..\openssl\lib\x86"
+				AdditionalLibraryDirectories="..\Debug;..\..\openssl\lib\x86;;..\..\Poco\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
